cot-macros/tests/ui/func_query_method_call_on_db_field.stderr
error: accessing members of values that reference database fields is unsupported
  --> tests/ui/func_query_method_call_on_db_field.rs:14:21
   |
14 |     query!(MyModel, $name.len);
   |                     ^^^^^
